--- a/pocket_meal/index.html
+++ b/pocket_meal/index.html
@@ -97,7 +97,7 @@
                         <span class="new">New</span>
                         <span class="best">Best</span>
                     </div>
-                    <p>미트볼 도시락</p>
+                    <p>미트볼 도시락1</p>
                     <button class="btn_menu_view" type="button">보러가기</button>
                 </div>
             </div>
