--- a/pocket_meal/index.html
+++ b/pocket_meal/index.html
@@ -13,6 +13,7 @@
             <div class="header_right">
                 <a href="#">로그인</a>
                 <a href="#">회원가입</a>
+                <a href="#">마이페이지</a>
                 <input class="header_search" type="text" name="search" placeholder="검색어를 입력하세요.">
             </div>
         </div>
